--- a/frontend/public/assets/login.css
+++ b/frontend/public/assets/login.css
@@ -95,7 +95,6 @@ body {
   font-family: var(--font-poppins);
   color: var(--color-white);
   text-align: left;
-  padding-left: 5%;
 }
 .input-instruction {
   align-self: stretch;
@@ -103,6 +102,7 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: flex-start;
+  margin: auto;
 }
 .an-otp-will {
   width: 290px;
